Do not protect docs and info routes
